# mct-flask-sqlalchemy-redis

./: .env  .env.example  .flake8  .gitignore  Dockerfile  Dockerfile.celery  LICENSE  README.md  client_secret.json  commands.txt  config.py  docker-compose.yml  er-diagram.mwb  er-diagram.mwb.bak  gunicorn.conf.py  gunicorn_config.py  index.html  manage.py  output.html  pyproject.toml  pytest.ini  roles.txt  run.py  setup.sh  start_app.sh  start_celery.sh
banned_ip/: README.md
cerf/: cerf_key.pem  certificate.pem
csv/: README.md  permissions.csv  roles.csv  roles_permissions.csv
er/: README.md  er-diagram.mwb  er-diagram.mwb.bak
logs/: README.md
mct_app/: __init__.py  email.py  flask_log.py  search.py  utils.py
mct_app/administration/: models.py  views.py
mct_app/auth/: forms.py  models.py  views.py
mct_app/files/: README.md
mct_app/site/: forms.py  links.py  models.py  utils.py  views.py
mct_app/static/css/: admin.css  style.css  style.map
mct_app/static/js/: admin.js  api.js  main.js  odnoklassniki.js  phonenumber.js  popover.scr.js  question.not.reoload.page.js  replace.5c.backslash.js  responsive.popup.image.js  submit_form.js  switchThemeFunction.js  telegram.js
mct_app/static/sass/: style.sass
mct_app/templates/: account.html  article.html  articles.html  articles_list.html  base.html  consultation.html  contacts.html  cookie-info.html  home.html  news.html  ok.html  paginator.html  paragraph.html  question.html  questions.html  search_result.html  show_phone.html  textbook.html
mct_app/templates/admin/: edit-paragraph.html  edit.html  index.html
mct_app/templates/errors/: 401.html  403.html  404.html  451.html  500.html
mct_app/templates/forms/: ask_question.html  edit_diary.html  get_consultation.html  give_answer.html  login.html  new_diary.html  recommendation.html  registration.html  reset_password_request.html  search.html  social_media_enter.html
migrations/versions/: 4cbafa17133c_.py  62702892f5ca_.py  6a1267036844_.py  83b03ffae1cc_.py  95305370a8c5_.py  cece8088ff77_.py  e74fbe26f270_.py  e9baa4a81a14_.py  f3b324b81ebd_.py
my_app/templates/: articles-6.html  articles.html  contacts.html  index.html  news.html  textbook.html
tests/: conftest.py  test_administration.py  test_auth.py  test_site.py  test_something.py  test_utils.py
(+75 files in other folders)
