[tool.poetry]
name = "metacognitive site"
version = "1.0"
description = "A website about metacognitive therapy"
authors = ["Ivan Zaycev"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
python-dotenv = "^1.0.1"
flask-admin = "^1.6.1"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.7"
pytest = "^8.1.1"
flask-wtf = "^1.2.1"
phonenumbers = "^8.13.35"
email-validator = "^2.1.1"
flask-login = "^0.6.3"
google-auth = "^2.29.0"
google-auth-oauthlib = "^1.2.0"
requests = "^2.31.0"
pyopenssl = "^24.1.0"
itsdangerous = "^2.2.0"
flask-mailman = "^1.1.0"
setuptools = "^69.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
